<resources>
    <string name="app_name">Vouri</string>
    <string name="explain_vourinc">send and receive money all over the world with vouriinc.</string>
    <string name="login_text">login</string>
    <string name="sing_up_text">sign up</string>
    <string name="fogot_password_text">https://vouriinc.com/login</string>
    <string name="navigate">Goto Navigation Drawer Activity</string>
    <string name="tabbed">Goto Tabbed Activity</string>
    <string name="Vouriinc">Vouriinc</string>

    <string name="email">email</string>
    <string name="sender">Sender Name</string>
    <string name="date">Date:</string>
    <string name="receiver">Receiver Name</string>
    <string name="cfa">0.00Fcfa</string>
    <string name="amount">Amount</string>
    <string name="dollars">$0.00</string>
    <string name="info">No information available here</string>

    <string name="password_text">password</string>
    <string name="password_text_confirm_login_two">confirm your password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">RecyclerView</string>
    <string name="title_dashboard">Dial</string>
    <string name="title_notifications">Web</string>
    <string name="images">Images</string>
    <string name="phone">Phone number</string>
    <string name="username">Username</string>
    <string name="dog">Dog</string>
    <string name="scroll_text">Once I saw a little bird, coming hop hop hop,
        so I said, little bird, can you stop stop stop. And as I was going to
    the window to say, How do you do?, but it shoke its little tail and away
    it flew. Little bird Little bird, come come again.</string>
    <string-array name="countries">
        <item>Cameroon</item>
        <item>USA</item>
        <item>Canada</item>
        <item>China</item>
    </string-array>
    <string name="checkbox">Agree to terms and conditions</string>
    <string name="fxn">Function</string>
    <string name="title_activity_transaction_details">TransactionDetails</string>
    <string name="title_activity_transaction_detail">TransactionDetailActivity</string>

    <string name="transaction">Goto Transaction Details</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab1">First Tab</string>
    <string name="tab2">Second Tab</string>
    <string name="tab3">MyTab</string>
    <string name="title_activity_tabs">Tabs</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="firstTab">First Tab Fragment</string>
    <string name="secondTab">Second Tab Fragment</string>
    <string name="thirdTab">Third Tab Fragment</string>
    <string name="finance">Finance</string>
    <string name="usd">USD</string>
    <string name="fig">10.05</string>
    <string name="recipient">Recipient</string>
    <string name="frs">(55,000XAF)</string>
    <string name="todo">TODO</string>
    <string name="style_preview">Style Preview</string>
    <string name="time">Time</string>

</resources>
