<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F6F3" >

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="#C2BBBB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.168" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/amount"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3"
        app:layout_constraintVertical_bias="0.109" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/dollars"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="330dp"
                android:layout_height="160dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="195dp"
                app:cardBackgroundColor="#8292E2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/sender"
                    android:textColor="#FDFDFE"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="60dp"
                    android:text="@string/phone"
                    android:textColor="#FDFDFE"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="110dp"
                    android:text="@string/date"
                    android:textColor="#FDFDFE"
                    android:textSize="20sp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="330dp"
                android:layout_height="160dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="80dp"
                app:cardBackgroundColor="#8292E2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/receiver"
                    android:textColor="#FDFDFE"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="60dp"
                    android:text="@string/phone"
                    android:textColor="#FDFDFE"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="110dp"
                    android:text="@string/date"
                    android:textColor="#FDFDFE"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="200dp"
                    android:layout_marginLeft="200dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/amount"
                    android:textColor="#FDFDFE"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="200dp"
                    android:layout_marginLeft="200dp"
                    android:layout_marginTop="90dp"
                    android:text="@string/cfa"
                    android:textColor="#FDFDFE"
                    android:textSize="20sp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="330dp"
                android:layout_height="160dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="80dp"
                app:cardBackgroundColor="#8292E2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="60dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/info"
                    android:textColor="#FDFDFE"
                    android:textSize="20sp" />


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="330dp"
                android:layout_height="160dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="80dp"
                app:cardBackgroundColor="#8292E2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="60dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/info"
                    android:textColor="#FDFDFE"
                    android:textSize="20sp" />


            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>